Bug 433983 - Widget explorer does not list some widgets despite being in formfactor
Summary: Widget explorer does not list some widgets despite being in formfactor
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Widget Explorer sidebar (other bugs)
Version First Reported In: 5.21.2
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-05 07:49 UTC by Bhushan Shah
Modified: 2021-03-05 15:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bhushan Shah 2021-03-05 07:49:14 UTC
SUMMARY

On phone some widgets are not listed, despite having matching formfactor entries

STEPS TO REPRODUCE
1. export PLASMA_PLATFORM=phone:handheld
2. plasmashell
3. Open widget explorer

OBSERVED RESULT

4. Notice that analog clock is not listed

EXPECTED RESULT

Analog clock should be listed, given it have handset in X-KDE-FormFactors key
Comment 1 Bug Janitor Service 2021-03-05 11:06:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/695
Comment 2 Marco Martin 2021-03-05 11:28:16 UTC
Git commit 9dba1a78a3519cad2aa9e00d0ea31376a457e4e2 by Marco Martin.
Committed on 05/03/2021 at 11:27.
Pushed by mart into branch 'master'.

proper form factor filtering

consider an applet acceptable for the formfactor if at least one
of its formfactors are contained in KDeclarative::runtimePlatform

or if either KDeclarative::runtimePlatform or applet formfactors
are empty.
(before informFactor failed if even one of the applet supported
formfactors was not in runtimePlatform

M  +6    -4    components/shellprivate/widgetexplorer/plasmaappletitemmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/9dba1a78a3519cad2aa9e00d0ea31376a457e4e2
Comment 3 Marco Martin 2021-03-05 11:29:26 UTC
Git commit 78f885a17682356355b2368b095bf9290c49127d by Marco Martin.
Committed on 05/03/2021 at 11:29.
Pushed by mart into branch 'Plasma/5.21'.

proper form factor filtering

consider an applet acceptable for the formfactor if at least one
of its formfactors are contained in KDeclarative::runtimePlatform

or if either KDeclarative::runtimePlatform or applet formfactors
are empty.
(before informFactor failed if even one of the applet supported
formfactors was not in runtimePlatform

M  +6    -4    components/shellprivate/widgetexplorer/plasmaappletitemmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/78f885a17682356355b2368b095bf9290c49127d