proper form factor filtering

consider an applet acceptable for the formfactor if at least one
of its formfactors are contained in KDeclarative::runtimePlatform

or if either KDeclarative::runtimePlatform or applet formfactors
are empty.
(before informFactor failed if even one of the applet supported
formfactors was not in runtimePlatform

BUG:433983